ingress/ingress_rules/path_based/nginx/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP      
  selector:
          app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
